@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.3.0'
     id 'io.spring.dependency-management' version '1.1.5'
     id 'io.freefair.lombok' version '8.6'
+    id 'org.graalvm.buildtools.native' version '0.10.2'
 }
 
 group = 'space.yong.orkes'
@@ -24,6 +25,21 @@ dependencies {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
     implementation 'com.google.oauth-client:google-oauth-client:1.36.0'
+}
+
+graalvmNative {
+    binaries {
+        main {
+            buildArgs.add('--verbose')
+            buildArgs.add('--add-opens=java.base/java.nio=ALL-UNNAMED')
+            buildArgs.add('--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED')
+            buildArgs.add('--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED')
+            buildArgs.add('--trace-class-initialization=ch.qos.logback.classic.Logger')
+            buildArgs.add('--trace-object-instantiation=ch.qos.logback.core.AsyncAppenderBase$Worker')
+            buildArgs.add('--initialize-at-build-time=org.slf4j.LoggerFactory,ch.qos.logback')
+            buildArgs.add('--initialize-at-run-time=io.netty')
+        }
+    }
 }
 
 bootBuildImage {
